# 2fa

./: .gitignore  2fa.py  Makefile  README.md  pyproject.toml  test_2fa.py  twofa.py
.github/workflows/: ci.yml  lint.yml  tests.yml
